--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,10 +17,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.x
+          pip-options: '--upgrade setuptools wheel'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install setuptools
           pip install build
           pip install twine
 
